@@ -45,6 +45,7 @@ class Product(models.Model):
     outer_id     = models.CharField(max_length=64,unique=True,null=False,blank=True,verbose_name='外部编码')
     name         = models.CharField(max_length=64,blank=True,verbose_name='商品名称')
     
+    barcode      = models.CharField(max_length=64,null=True,blank=True,index=True,verboase_name='条码')
     category     = models.ForeignKey(ProductCategory,null=True,blank=True,related_name='products',verbose_name='内部分类')
     pic_path     = models.CharField(max_length=256,blank=True)
     
@@ -70,6 +71,7 @@ class Product(models.Model):
     sync_stock   = models.BooleanField(default=True,verbose_name='库存同步')
     is_assign    = models.BooleanField(default=False,verbose_name='警告解除') #是否手动分配库存，当库存充足时，系统自动设为False，手动分配过后，确定后置为True
     
+    post_check   = models.BooleanField(default=False,verbose_name='需扫描验货')
     status       = models.CharField(max_length=16,db_index=True,choices=ONLINE_PRODUCT_STATUS,
                                     default=pcfg.NORMAL,verbose_name='商品状态')
     
@@ -222,6 +224,7 @@ class ProductSku(models.Model):
     """
     outer_id = models.CharField(max_length=64,null=True,blank=True,verbose_name='规格外部编码')
     
+    barcode  = models.CharField(max_length=64,null=True,blank=True,index=True,verboase_name='条码')
     product  = models.ForeignKey(Product,null=True,related_name='prod_skus',verbose_name='商品')
     
     quantity = models.IntegerField(default=0,verbose_name='库存数')
@@ -242,9 +245,12 @@ class ProductSku(models.Model):
     
     is_split   = models.BooleanField(default=False,verbose_name='需拆分')
     is_match   = models.BooleanField(default=False,verbose_name='有匹配')
+    
     sync_stock   = models.BooleanField(default=True,verbose_name='库存同步') 
     #是否手动分配库存，当库存充足时，系统自动设为False，手动分配过后，确定后置为True
     is_assign    = models.BooleanField(default=False,verbose_name='警告解除') 
+    
+    post_check   = models.BooleanField(default=False,verbose_name='需扫描验货')
     created      = models.DateTimeField(null=True,blank=True,auto_now_add=True,verbose_name='创建时间')
     modified     = models.DateTimeField(null=True,blank=True,auto_now=True,verbose_name='修改时间')
     status       = models.CharField(max_length=10,db_index=True,choices=ONLINE_PRODUCT_STATUS,
